flightdeck/jetpack/media/css/UI.Browser.css
/*
---
filename: UI.Browser.css
decription: Provides base layout for FlightDeck
license: MIT-style license.
authors:
 - Oskar Krawczyk (http://nouincolor.com/)
...
*/

/* alternative layout for the browse-like sections */
body {
   background-image: none;
}

#app-sidebar {
   border-right: none;
   padding: 0 15px;
   width: 200px;
   margin-left: -230px;
}

#app-body {
   margin-top: 20px;
}


.UI_Browser {
   margin: 15px 0 0;
}

   .UI_Browser .UI_Item {
      min-height: 115px;
      padding: 0 150px 0 110px;
      margin: 0 20px 10px 0;
      border-bottom: solid 1px #E9EDF0;
      position: relative;
   }
   
      .UI_Browser .UI_Icon {
         position: absolute;
         top: 0;
         left: 0;
         width: 96px;
         height: 106px;
         background-image: url(../img/UI_Browser/browse-icons.png);
         background-repeat: no-repeat;
      }
      
         .UI_Browser .UI_Icon.jetpack {
            background-position: 0 0;
         }
         
         .UI_Browser .UI_Icon.dependency {
            background-position: -96px 0;
         }
   
      .UI_Browser .UI_Item h3 {
         font-weight: bold;
         font-size: 1.1em;
         display: inline;
         
      }   
   
      .UI_Browser .UI_Item h4 {
         font-size: .7em;
         font-style: bold;
         background: #A6AEB5;
         color: #F8F8F8;
         -moz-border-radius: 3px;
         padding: 1px 3px;
         margin: 0 0 0 5px;
         display: inline-block;
      }
   
      .UI_Browser .UI_Item p {
         margin: 10px 0 0;
         font-size: .9em;
         color: #7F7F7F;
      }
   
      .UI_Browser .UI_Actions {
         margin: 14px 0 0;
/*         position: absolute;
         top: 0;
         right: 0;
*/         
      }
   
         .UI_Browser .UI_Actions li {
            background: #BEC5CC;
            border-bottom: solid 1px #fff;
            padding: 1px;
            margin: 0 -1px 1px 0;
            float: left;
            position: relative;
         }
      
            .UI_Browser .UI_Actions li a {
               background: -moz-linear-gradient(270deg, #EBEFF2, #D4D9DF);
               border-top: solid 1px #fff;
               display: block;
               padding: 7px 10px;
               font-size: .9em;
               text-shadow: 0 1px 0 #fff;      
            }
      
         /* Starting element */
         .UI_Browser .UI_Actions li:first-child {
            -moz-border-radius: 6px;
            -moz-border-radius-topright: 0;
            -moz-border-radius-bottomright: 0;      
         }

            .UI_Browser .UI_Actions li:first-child a {
               -moz-border-radius: 5px;
               -moz-border-radius-topright: 0;
               -moz-border-radius-bottomright: 0;
            }

         /* Ending element */
         .UI_Browser .UI_Actions li:last-child {
            -moz-border-radius: 6px;
            -moz-border-radius-topleft: 0;
            -moz-border-radius-bottomleft: 0;      
         }

            .UI_Browser .UI_Actions li:last-child a {
               -moz-border-radius: 5px;
               -moz-border-radius-topleft: 0;
               -moz-border-radius-bottomleft: 0;
            }

         .UI_Browser .UI_Actions li a:hover {
            background: -moz-linear-gradient(270deg, #FBFBFB, #E6E8EB);
            text-decoration: none;
         }

         .UI_Browser .UI_Actions li a:active {
            background: -moz-linear-gradient(270deg, #BEC5CC, #D9DDE0);
            border-top: solid 1px transparent;
            color: #6D7880;
         }
      
.UI_Pagination {
   margin: 0 0 40px;
}

   .UI_Pagination li {
      font-weight: bold;
      display: inline-block;
      color: #ccc;
      font-size: .9em;
      margin: 0 2px;
   }
      
      .UI_Pagination li a {
         display: inline-block;
         color: #478CDE;
         padding-bottom: 1px;
         border-bottom: solid 1px #E9EDF0;
         
      }
      
      .UI_Pagination li a:hover,
      .UI_Pagination li.selected a {
         text-decoration: none;
         color: #3E464D;
         border-bottom: solid 1px #478CDE;
      }
      
      .UI_Pagination li.UI_Pagin_Action span {
         display: inline-block;
         height: 12px;
         width: 11px;
         background-image: url(../img/toggle-arrows.png);
         position: relative;
         top: 2px;
      }
      
      .UI_Pagination li.UI_Pagin_Action.prev span {
         background-position: 0 -58px;
      }
      
      .UI_Pagination li.UI_Pagin_Action.next span {
         background-position: 0 -46px;
      }
      
      .UI_Pagination li.UI_Pagin_Action.more span {
         background-position: 0 -46px;
      }

